--- a/blog_application/templates/homepage.html
+++ b/blog_application/templates/homepage.html
@@ -7,7 +7,6 @@
             background-color: #1a202c;
             color: white;
             font-family: Arial, sans-serif;
-            /* text-align: center; */
             margin: 0;
             padding: 0;
         }
@@ -58,15 +57,14 @@
             margin-top: 20px;
         }
     </style>
-</head> 
+</head>
 <body>
     <div class="container">
         <h1>Blogcito</h1>
-        <a class="admin-link" href="http://127.0.0.1:8000/admin">Admin page</a>
         {% for post in posts %}
         <div class="post">
-            <h2><a href="#">{{ post.title }}</a></h2>
-            <p>{{ post.body|linebreaks }}</p>
+            <h2><a href="{% url 'blog_application:post_detail' post.id %}">{{ post.title }}</a></h2>
+            <p>{{ post.body|linebreaks|truncatechars:500 }}</p>
             <p><small>Posted on {{ post.created_at }}</small></p>
         </div>
         {% empty %}
