--- a/blog_application/templates/homepage.html
+++ b/blog_application/templates/homepage.html
@@ -6,7 +6,7 @@
         body {
             background-color: #1a202c;
             color: white;
-            font-family: Arial, sans-serif;
+            font-family: "Helvetica Neue", "sans-serif";
             margin: 0;
             padding: 0;
         }
@@ -23,7 +23,7 @@
         }
 
         .post {
-            background-color: #2c5282;
+            background-color: #23364c;
             padding: 20px;
             border-radius: 4px;
             margin-bottom: 20px;
